--- a/ListaTarefas/index.html
+++ b/ListaTarefas/index.html
@@ -16,6 +16,8 @@
 
     <h1 class="title">Olá,<input class="title" id="name" type="text" placeholder=""></h1> 
     
+    <div class="all">
+
     <!-- All tasks - lista lateral esquerda -->
 
     <div class="all-tasks">
@@ -48,12 +50,16 @@
                     <button class="btn create" aria-label="Criar uma nova tarefa">+</button>
                 </form>
             </div>
-            <!-- botões de apagar tarefa e lista -->
-            <div class="delete-stuff">
-                <button class="btn delete" data-clear-complete-tasks-button>Limpar tarefas realizadas</button>
-                <button class="btn delete" data-delete-list-button>Apagar Lista</button>
-            </div>
         </div>
+
+        <!-- botões de apagar tarefa e lista -->
+        <div class="delete-stuff">
+            <button class="btn delete" data-clear-complete-tasks-button>Limpar tarefas realizadas</button>
+            <button class="btn delete" data-delete-list-button>Apagar Lista</button>
+        </div>        
+
+    </div>
+
     </div>
 
         <!-- template de criar tarefa do javascript -->
