--- a/ListaTarefas/index.html
+++ b/ListaTarefas/index.html
@@ -56,6 +56,7 @@
         <div class="delete-stuff">
             <button class="btn delete" data-clear-complete-tasks-button>Limpar tarefas realizadas</button>
             <button class="btn delete" data-delete-list-button>Apagar Lista</button>
+            <button class="btn delete" data-clear-all="">Apagar Tudo</button>
         </div>        
 
     </div>
