correção de bugs

--- a/ListaTarefas/index.html
+++ b/ListaTarefas/index.html
@@ -13,8 +13,10 @@
 <body>
 
     <!-- Título com o Input do Nome -->
-
-    <h1 class="title">Olá,<input class="title" id="name" type="text" placeholder=""></h1> 
+    <div class="header">
+        <h1 class="title">Olá,<input class="title" id="name" type="text" placeholder=""></h1> 
+    </div>
+    
     
     <div class="all">
 
@@ -56,7 +58,6 @@
         <div class="delete-stuff">
             <button class="btn delete" data-clear-complete-tasks-button>Limpar tarefas realizadas</button>
             <button class="btn delete" data-delete-list-button>Apagar Lista</button>
-            <button class="btn delete" data-clear-all="">Apagar Tudo</button>
         </div>        
 
     </div>
